[tool.poetry]
name = "pysto"
version = "0.1.0"
description = ""
authors = ["lmazouin <53606603+LMazouin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
